@@ -60,7 +60,8 @@ Changes in current version:
  o make event_rpcgen.py generate code include event-config.h; reported by Sam Banks.
  o switch thread support so that locks get allocated as they are needed.
  o make event methods static so that they are not exported; from Andrei Nigmatulin
-
+ o make RPC replies use application/octet-stream as mime type
+	
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
  o demote most http warnings to debug messages
